idea/testData/multiModuleHighlighting/multiplatform/basic/jvm/jvm.kt
actual class <error descr="[ACTUAL_WITHOUT_EXPECT] Actual class 'Your' has no corresponding expected declaration">Your</error> {

}

expect class <error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'His' has no actual in module jvm for JVM">His</error> {

}

expect class Their {

}

actual class Their {

}
